syntax = "proto3";
package lavanet.lava.projects;

import "gogoproto/gogo.proto";
import "projects/params.proto";
import "common/fixationEntry.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/lavanet/lava/x/projects/types";

// GenesisState defines the projects module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated lavanet.lava.common.RawMessage projectsFS = 2 [(gogoproto.nullable) = false];
  repeated lavanet.lava.common.RawMessage developerFS = 3 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
